<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="raquel.mobilecomputing.OptionsActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <TextView
                android:textSize="30dp"
                android:text="@string/sound_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sound_text" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:text="ToggleButton"
                style="@style/buttonStyle"
                android:id="@+id/soundToggleButton"
                android:layout_weight="1"
                android:textOff="@string/OFF"
                android:textOn="@string/ON"
                android:checked="true"
                />


        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <TextView
                android:textSize="30dp"
                android:text="@string/timelimit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timelimit_textview" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ToggleButton
                android:text="ToggleButton"
                style="@style/buttonStyle"
                android:id="@+id/timeLimitToggleButtom"
                android:layout_weight="1"
                android:textOff="@string/OFF"
                android:textOn="@string/ON"
                android:checked="true" />


        </LinearLayout>

    </LinearLayout>





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            >

                <TextView
                    android:textSize="30dp"
                    android:text="@string/autosave_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/autosave_textview" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ToggleButton
                    android:text="ToggleButton"
                    style="@style/buttonStyle"
                    android:id="@+id/autoSaveToggleButton"
                    android:layout_weight="1"
                    android:textOff="@string/OFF"
                    android:textOn="@string/ON"
                    android:checked="true"
                    />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            >
                <TextView
                    android:textSize="30dp"
                    android:text="@string/difficulty_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/difficulty_textview" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <ToggleButton
                    android:text="ToggleButton"
                    style="@style/buttonStyle"
                    android:id="@+id/difficultyToggleButton"
                    android:layout_weight="1"
                    android:textOff="@string/easy_text"
                    android:textOn="@string/hard_text"
                    />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:text="@string/saveoptions_button"
            style="@style/buttonStyle"
            android:id="@+id/saveoptions_button"
            android:onClick="saveOptions"
            android:layout_margin="10dp"/>

        <Button
            android:text="@string/defaultoptions_button"
            style="@style/buttonStyle"
            android:id="@+id/defaultoptions_button"
            android:onClick="defaultOptions"
            android:layout_margin="10dp"/>

        <Button
            android:text="@string/quit_button"
            style="@style/buttonStyle"
            android:id="@+id/quit_button_options"
            android:onClick="quitGame"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>
