<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_categories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="raquel.mobilecomputing.CategoriesActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:text="@string/choosecategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chooseCategoryText"
            android:layout_weight="1"
            android:textSize="35dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorText1"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/music"
            android:id="@+id/musicButton"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:onClick="music"/>



        <ImageButton
            android:layout_width="40dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/cinema"
            android:id="@+id/cinemaButton"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:onClick="cinema"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/sports"
            android:id="@+id/sportButton"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:onClick="sport"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/videogames"
            android:id="@+id/videogamesButton"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:onClick="videogames"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/series"
            android:id="@+id/seriesButton"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:onClick="series"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        >

        <Button
            android:text="@string/options_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:id="@+id/options_button_categories"
            android:layout_weight="1"
            android:onClick="optionsMenu"

            />

        <Button
            style="@style/buttonStyle"
            android:text="@string/quit_button"
            android:layout_width="wrap_content"
            android:id="@+id/quit_button_categories"
            android:layout_weight="1"
            android:onClick="quitGame"

            />

    </LinearLayout>

</LinearLayout>
